fix sizing error on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ img{
   border-radius: 15px; 
   padding: 5px;
   float:right;
-  width: 800px;
+  width: 70%;
   background-color:rgb(220, 246, 255);
 }
 
